<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/colorDarkBlue"
              tools:context=".view.FacebookBlockActivity"
>
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme.ActionBarTheme"
            android:padding="5dp"
            app:logo="@drawable/orizontallogo"
            app:navigationIcon="@drawable/arrow_back"
            android:layout="@menu/new_menu"
    />
    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleSecurityConf"
            android:text="@string/FacebookC"
            android:textColor="@color/colorYellow"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textSize="20dp"

    />
    <Button
            android:text="@string/LoginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/sAccedi"
            android:textColor="@color/colorLightGrey"
            android:theme="@style/ThemeOverlay.MyDarkButton"/>
    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleInsTextConf"
            android:text="@string/FacebookText"
            android:textColor="@color/colorLightGrey"
            android:layout_marginBottom="10dp"
            android:gravity="center"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textBlockConf"
            android:textColor="@color/colorLightGrey"
            android:gravity="center"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
            app:backgroundTint="@color/colorLightGrey" android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
        <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

            <Button android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:id="@+id/sBlockbtnSalvab"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/saveblockAndBack"
                    android:textColor="@color/colorLightGrey"
                    android:theme="@style/ThemeOverlay.MyDarkButton"
            />

            <Button android:layout_weight="1"
                    android:id="@+id/sBlockbtnSalvaw"
                    android:layout_height="120dp"
                    android:layout_width="0dp"
                    android:width="0dp"
                    android:text="@string/saveWorkflow"
                    android:gravity="center"
                    android:textColor="@color/colorLightGrey"
                    android:theme="@style/ThemeOverlay.MyDarkButton"

            />
            <Button android:layout_weight="1"
                    android:layout_height="120dp"
                    android:layout_width="0dp"
                    android:id="@+id/sBlockbtnAnnulla"
                    android:text="@string/cancel"
                    android:textColor="@color/colorLightGrey"
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:layout_gravity="right|center_vertical"/>
    </LinearLayout>
</LinearLayout>